InternexDev_Sandbox/src/objects/NEFT_RTGS_Invoice_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Balance__c</fullName>
        <label>Applied Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>NEFT RTGS Invoice Matrixs</relationshipLabel>
        <relationshipName>NEFT_RTGS_Invoice_Matrixs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Cash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web Cash</label>
        <referenceTo>Web_Cash__c</referenceTo>
        <relationshipLabel>NEFT RTGS Invoice Matrixs</relationshipLabel>
        <relationshipName>NEFT_RTGS_Invoice_Matrixs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NEFT RTGS Invoice Matrix</label>
    <nameField>
        <displayFormat>NEFT-INVOICE-{0000}</displayFormat>
        <label>NEFT RTGS Invoice Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEFT RTGS Invoice Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>